<resources>
    //Título app
    <string name="app_name">WhatsApp</string>

    //Textos da página MainActivity
    <string name="tituloMain">Bem-vindo(a) ao WhatsApp</string>
    <string name="termoMain">Leia nossa <a href="https://www.whatsapp.com/legal/?lang=pt_br#privacy-policy">
        Política de Privacidade</a>. Toque em \"CONCORDAR E CONTINUAR\" para aceitar os
        <a href="https://www.whatsapp.com/legal/?lang=pt_br#terms-of-service">Termos de Serviço</a>.</string>
    <string name="textBotaoMain">CONCORDAR E CONTINUAR</string>
    <string name="textFromMain">from</string>
    <string name="textFacebookMain">FACEBOOK</string>

    //Textos da página de inserir número
    <string name="tituloLogin">Insira seu número de telefone</string>
    <string name="subTituloLogin">O WhatsApp enviará uma mensagem SMS para confirmar
        seu número de telefone. Qual é meu número?</string>
    <string-array name="arrayPais">
        <item>Brasil</item>
        <item>Portugal</item>
        <item>Angola</item>
    </string-array>
    <string name="codPais">55</string>
    <string name="textAviso">Tarifas de SMS de sua operadora podem ser \naplicadas</string>
    <string name="textBotaoLogin">Avançar</string>

    //Textos da página de verificar código
    <string name="tituloVerificarCod">Confirmar %1$s</string>
    <string name="subTituloVerificarCod">Aguardando para detectar automaticamente um SMS enviado
        para %1$s. Número errado?</string>
    <string name="subTituloVerificarCod2">Você tentou registrar %1$s recentemente.
        Aguarde antes de solicitar um SMS com o seu código. Número errado?</string>
    <string name="hintCod"><font size="25">&#8211;&#8211;&#8211; &#160; &#8211;&#8211;&#8211;</font></string>
    <string name="textAvisoVerificarCod">Insira o código de 6 dígitos</string>
    <string name="textReenviarSms">Reenviar SMS</string>

    //Textos da página de dados perfil
    <string name="tituloDadosPerfil">Dados de perfil</string>
    <string name="subTituloDadosPerfil">Insira seu nome e uma foto de perfil (opcional)</string>
    <string name="hintDadosPerfil">Digite seu nome</string>

    //Textos da página de principal
    <string name="tabConversas">CONVERSAS</string>
    <string name="tabStatus">STATUS</string>
    <string name="tabChamadas">CHAMADAS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
